--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -16,7 +16,7 @@ En este punto se desrrollarán los requisitos y los temas más importantes a ten
 * Stakeholders (partes interesadas y expectativas)
 ****
 
-=== Descripción general de los requisitos
+=== Descripción general de los requisitos, características esenciales y objetivos comerciales
 
 [role="arc42help"]
 ****
@@ -25,13 +25,34 @@ Breve descripción de los requisitos funcionales, fuerzas motrices, extracto (o 
 de requisitos Enlace a documentos de requisitos (con suerte existentes)
 (con número de versión e información donde encontrarlo).
 
+Los requisitos más importantes son:
+* Los clientes deben tener la posibilidad de seleccionar y encargar productos para comprarlos.
+* Se calcularán los costes de envío consultando la dirección del usuario en su POD (calculando los 
+costes en función de la distnacia del centro de distribución a la dirección del usuario). Este cálculo
+se llevará a cabo una vez el cliente haya seleccionado los productos a comprar.
+* Se mostrarán los costes finales de los productos a comprar por un cliente. Una vez el cliente decida
+comprarlos, se registrará la venta como realizada y se pasará a su envío.
+* Los clientes podrán en todo momento ver sus pedidos realizados.
+* El desarrollo de la aplicación será mediante React y TypeScript
+* La aplicación deberá ser accesible y estar desplegada usando un sistema de integración continua.
+La tecnología de despliegue se especificará en otra parte de la documentación. ¡¡¡¡¡¡¡!!!!!!!
+
 .Motivación
 Desde el punto de vista de los usuarios finales, se crea o modifica un sistema para
 mejorar el apoyo de una actividad empresarial y/o mejorar la calidad.
 
+El objetivo final de la aplicación es crear un sistema de venta online
+que respete la privacidad de los clientes siguiendo los principios SOLID, para ello
+se usarán los PODs de los usuarios siempre que den los permisos necesarios.
+
 .Formulario
 Breve descripción textual, probablemente en formato de caso de uso tabular.
 Si existen documentos de requisitos, este resumen debe hacer referencia a estos documentos.
+
+La tienda online desarrollada se encargará de vender juguetes infantiles.
+En el siguiente enlace se puede observar de manera más exhaustiva los requisitos e introducción a la aplicación a desarrollar: https://arquisoft.github.io/course2122/labEnunciadoPractica.html
+Para acceder directamente a la página principal de SOLID usar el siguiente enlace: https://solidproject.org/
+Para el desarrollo en React o TypeScript se puede consultar: https://reactjs.org/ o https://www.typescriptlang.org/ respectivamente.
 
 Mantenga estos extractos lo más cortos posible. Equilibre la legibilidad de este documento con la posible redundancia en relación con los documentos de requisitos.
 ****
