--- a/docs/04_solution_strategy.adoc
+++ b/docs/04_solution_strategy.adoc
@@ -1,5 +1,13 @@
 [[section-solution-strategy]]
 == Solution Strategy
+Como base, vamos a utilizar el lenguaje de programación TypeScript, impuesto en los requisitos de diseño. Es, en esencia, un superconjunto de JavaScript que añade tipado. 
+Para realizar nuestro sistema de ventas hemos decidido utilizar la MERN stack. Esto incluye los siguientes elementos:
+* MongoDB: Es una base de datos NoSQL que facilita el trabajo con el Back-End. Es una decisión de diseño propia
+* Express js: Es un marco que se ah superpuesto a Node JS y se puede utilizar para crear el Back-End de nuestra web. Fue precisamente creado
+para la creación de sitios web.
+* React JS: Es un framework creado por Facebook ampliamente utlizado para crear componentes de la interfaz de usuario. Es un requisito de diseño por lo que no tenemos
+nada que decidir.
+* Node JS: Es un entorno de ejecución de JavaScript que permite ejecutar JavaScript del lado del servidor y no en un navegador.
 
 
 [role="arc42help"]
