--- a/docs/04_solution_strategy.adoc
+++ b/docs/04_solution_strategy.adoc
@@ -28,6 +28,12 @@ Testabilidad, la arquitectura permitirá probar fácilmente todos los componente
 El sistema va a ser desarrollado completamente por el equipo (utilizando debidamente los recursos mencionados) dividiendo el trabajo en dos partes claras: Front-End y Back-End. En cualquier caso, se irán compartiendo 
 todos los avances y cualquier duda intentando seguir una metodología ágil.
 
+El sistema de ventas se compondrá de diversas páginas web implementadas mediante TypeScript y React principalmente. La página principal desplegará diferentes categorías de 
+juguetes y un conjunto de juguetes destacados. Tendremos acceso a nuestro carrito y a nuestra cuenta, con lo que también podemos ver pedidos realizados anteriormente. Una vez 
+entras en una categoría de juguetes se desplegarán todos aquellos que estén presentes en la base de datos. También es posible utilizar el buscador para encontrar un determinado juguete.
+
+La interfaz gráfica se implementará desde el Front-End y se intentará cumplir la máxima usabilidad posible, teniendo en cuenta cualquier tipo de usuario
+
 
 [role="arc42help"]
 ****
