--- a/docs/09_design_decisions.adoc
+++ b/docs/09_design_decisions.adoc
@@ -1,6 +1,11 @@
 [[section-design-decisions]]
 == Design Decisions
-
+Utilizaremos las tecnologías ya mencionadas anteriormente, la pila MERN, ya que por experiencia de muchos desarrolladores son herramientas
+que se coordinan muy bien. 
+No podemos decir con precisión decisiones de diseño definitivas a estas alturas del desarrollo, pero tenemos pensado
+utilizar el Modelo Vista-Controlador para que la aplicación sea fácilmente ampliable en cuanto a funcionalidad. Podría surgir
+el uso de otros patrones conocidos como por ejemplo Command o Factory, pero es algo que iremos utilizando conforme vayamos desarrollando la
+aplicación. 
 
 [role="arc42help"]
 ****
@@ -24,3 +29,4 @@ Various options:
 * more detailed in form of separate sections per decision
 * ADR (architecture decision record) for every important decision
 ****
+qawsQA<WSDWE
