--- a/docs/03_system_scope_and_context.adoc
+++ b/docs/03_system_scope_and_context.adoc
@@ -1,5 +1,5 @@
 [[section-system-scope-and-context]]
-== System Scope and Context
+== Alcance y contexto del sistema
 
 
 [role="arc42help"]
@@ -20,7 +20,7 @@ Various options:
 * Lists of communication partners and their interfaces.
 ****
 
-=== Business Context
+=== Contexto empresarial
 
 Dede es una aplicación que tiene como objetivo vender de manera online juguetes infantiles. Los usuarios podrán hacer compras de
 estos productos con la mayor privacidad posible debido a que nuestra aplicación estará integrada con SOLID, de tal manera que todos
@@ -61,7 +61,7 @@ The title of the table is the name of your system, the three columns contain the
 
 **<optionally: Explanation of external domain interfaces>**
 
-=== Technical Context
+=== Contexto tecnico
 
 DIAGRAMA DEL CONTEXTO TECNICO
 image:03_system_scope_and_context_TechnicalDiagram.png["Hierarchy of building blocks"]
