--- a/docs/11_technical_risks.adoc
+++ b/docs/11_technical_risks.adoc
@@ -1,5 +1,5 @@
 [[section-technical-risks]]
-== Risks and Technical Debts
+== Riegos y Deudas Técnicas
 
 .Falta de conocimiento de React
 Es la primera vez que trabajamos con este framework, por lo que no tenemos ni idea de como funciona. 
